fixed bug where reviews not showing

--- a/browser/scss/product-detail/main.scss
+++ b/browser/scss/product-detail/main.scss
@@ -35,8 +35,7 @@
 
 #productSummary {
 	background-color: white;
-    height: 550px;
-    background-color: white;   
+    height: 550px; 
 }
 
 h2 {
